Version 0.9-svn

* documented configuration options query_timelimit and
  block_reason. See doc/examples/grossd.conf

#56: Grossd skips all the checks if block_threshold not set
#57: sjsms: query_timelimit is one second off

Version 0.9.1

Issues fixed:
#55: --disable-dnsbl broken on 0.9

Version 0.9

* changed the port defaults to be more compatible with
  the community, grossd now defaults to ports 5525 (grossd),
  5524 (sync), and 5522 (status queries)
* preliminary support for MILTER protocol, check config file
* support for definitive checks: it's now possible to write 
  checks that cause grossd to block or pass (whitelisting)
* dnsbl check is now run time configurable
* two new check types: RHSBL and DNSWL - check config file
  for documentation and examples. DNSWL is first definitive
  check. 

- improved thread counting in thread_pool.c
- code cleaning
- default for grey_mask was 0, effectively discarding client_ip
  information from greylisting triplet. Changed it to 24.
- checks for c-ares version: there's an API change between
  1.4.x and 1.5.0

Issues fixed:
#40: new type of check - RHSBL (RFE)
#41: new type of check - DNSWL (RFE)
#46: Make dnsbl checking run time configurable (RFE)
#47: Grossd will not run any checks if configured with --disable-dnsbl
#54: Grossd dies without error msg in non-localhost setup (with linux)

Version 0.8.2

- updating mappings example in INSTALL
- logging less verbose (one line per query)

Issues fixed:
#39: blocker queries cause segmentation fault
#43: Lot's of open udp connections when using grosscheck

Version 0.8.1

A couple of bugs fixed.

Issues fixed:
#35: grossd crashes when starting
#36: synchronization still loses one update message

Version 0.8.0

In short: Important changes from the previous version

* You must configure protocols in config file. This is done via
  'protocol' config file parameter. Either 'protocol = sjsms' or
  'protocol = postfix' or both.